# akkadian-translator

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  model.py  predict.py  predict_final.py  pyproject.toml  requirements-docker.txt  requirements.txt  train.py  train_final.py  train_optimized.py
data/: results.csv  submission_v2.csv  submission_v3.csv
scripts/: augment_data.py  back_translate.py  normalize.py
