[tool.poetry]
name = "akkadian-translator"
version = "0.1.0"
description = "Akkadian to English translation with ByT5"
authors = ["NeRuff <roman.r1ff@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
transformers = "^4.35.0"
datasets = "^2.14.0"
accelerate = "^0.24.0"
evaluate = "^0.4.0"
sacrebleu = "^2.4.0"
loguru = "^0.7.0"
typer = "^0.9.0"
pandas = "^2.0.0"
numpy = "^1.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
